--- a/megabox/css/megabox.css
+++ b/megabox/css/megabox.css
@@ -5,6 +5,7 @@
 *{margin: 0; padding: 0}
 a{text-decoration: none;}
 li{list-style: none;}
+
 .text-over{
   text-overflow: ellipsis;
   overflow: hidden;
@@ -14,18 +15,16 @@ li{list-style: none;}
   text-decoration: line-through /*텍스트 중간*/
   color: #aaa;
 }
-.skip{
-  font-size: 0;text-indent: -99999px;position: absolute;
-  }
-body{
-  min-width: 1200px; font-family: 'Nanum Gothic', sans-serif;}
+.skip{font-size: 0;text-indent: -99999px;position: absolute;}
+body{min-width: 1200px; font-family: 'Nanum Gothic', sans-serif;
+      background-image: linear-gradient(to right, #1e2931, #394e5a);}
 
 /*nav*/
 nav{
-  position: fixed; /*스크롤을 내려도 화면에서 고정됨.*/
+  position: fixed;
   width: 200px;
-  height: 100%;/*화면에 꽉 찬 높이*/
-  background: #fff;
+  height: 100%;
+  background: none;
   z-index: 100;
   border-right: 1px solid #555555;
 }
@@ -40,64 +39,44 @@ nav ul li a{
   width: 100%;
   height: 40px;
   line-height: 40px;
-  background: #eeeeee;
   font-size: 20px;
-  color: #000;
+  color: #fff;
   padding: 0 10px;
   box-sizing: border-box;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #38424a;
 }
-nav ul li:hover a, .active{  /*li 혹은 a에 해도됨.(=nav ul li a:hover)*/
-  background: #000;
+nav ul li:hover a, .active{
+  background: #2c3c46;
   color: #fff;
 }
-nav #sns{
-  position: absolute;
-  text-align: center;
-  right: 77px;
-  bottom: 66px;
-}
-nav #sns a{
-  display: inline-block;
-  font-size: 0;
-  /*백그라운드가 보여질 영역*/
-  width: 28px;
-  height: 28px;
-  background: url(../images/sns.gif) no-repeat;
-  background-size: 350px 250px;
-}
-nav #sns a.sns-facebook{
-  background-position: -27px -22px;
-}
-nav #sns a.sns-twitter{
-  background-position: -65px -22px;
-}
+
 /*section*/
 section{
   margin-left: 200px; /*section 여백*/
   padding: 0 10px;
 }
 section h2{
-  padding: 20px 0;
-  border-bottom: 2px solid #000;
+  color: #fff;
+  margin-top: 20px;
+  padding: 40px 0;
+  border-bottom: 2px solid #38424a
 }
 /*men*/
 #men ul{
   margin: 5 -5px;
-  overflow: hidden;/*높이가0이라고 나올 때 이렇게 처리*/
+  overflow: hidden;
 }
-#men ul li{float: left;width: 33.33%;}
+#men ul li{float: left;width: 33.33%;cursor: pointer;}
 #men ul li.thirdli{clear: left;}
 #men ul li .wrap{
-  position: relative; /*부모 자체가 움직이지않도록*/
-  margin: 5px; /*li에 margin을 주고싶으면 box-sizing을 해줘야함.*/
+  position: relative;
+  margin: 75px;
 }
 #men ul li .wrap img{
   width: 100%;
   display: block;
-  background: #f0f0f0;
-  padding: 30px;
   box-sizing: border-box;
+  box-shadow: 0 2px 16px 8px #00000047;
 }
 #men ul li .wrap .contents{
   position: absolute;
@@ -121,8 +100,6 @@ section h2{
   color: #fff;
 }
 /*women=======================================================================*/
-/*위치지정 시 px말고 %를 사용*/
-#women{background: #fff;}
 #women ul{overflow: hidden;}
 #women ul li{
   width: 50%;
@@ -132,7 +109,6 @@ section h2{
 #women ul li.afirstrunfilm{clear: left;}
 #women .wrap{
   position: relative;
-  background: #f0f0f0;
   overflow: hidden;
   box-sizing: border-box;/*아래에 선을 놓기위해 이미지처리*/
   border-bottom: 1px solid #555;
@@ -143,18 +119,19 @@ section h2{
   float: left;
   width:40%;
   padding: 20px;
-  background: #f7f7f7;
   box-sizing: border-box;
+  cursor: pointer;
 }
 #women .wrap dl{
   width: 71%;
   height: 100%;
   left: 40%;
+  color: #fff;
   padding: 10px 0 10px 10px;
 }
 #women .wrap dl dt{
   font-weight: bold;
-  border-bottom: 1px solid #555;
+  border-bottom: 1px solid #38424a;
   padding-bottom: 5px;
   margin-bottom: 5px;
 }
@@ -182,28 +159,25 @@ section h2{
   position: relative;
 }
 #boys ul li:nth-child(4){clear: left;}
-#boys ul li:hover .wrap{
-  border: 1px solid #000;
-}
+#boys ul li:hover .wrap{}
 #boys ul li .wrap{
-  position: relative; /**/
-  border: 25px solid #fff;
-  margin: 10px 5px; /*이미지 퍼센트로 조절하지말고 margin으로조절*/
+  position: relative;
+  margin: 40px 60px;
   padding: 10px;
 }
 #boys .wrap img{
   width: 100%;
-  padding: 20px;
   box-sizing: border-box;
-  background: #f0f0f0;
+  box-shadow: 0 2px 16px 8px #00000047;
 }
 #boys .wrap > span{
+  color: #fff;
   display: block; /*텍스트를 블럭처리*/
   border-bottom: 1px solid #555;
   padding-bottom: 5px;
   margin-bottom: 5px;
 }
-#boys ul li .wrap dl{}
+#boys ul li .wrap dl{color: #fff;}
 #boys ul li .wrap dl dt{
   font-weight: bold;
 }
@@ -248,16 +222,20 @@ section h2{
   border-bottom: 1px solid #555;
   margin-bottom: 5px;
   padding-bottom: 5px;
+  color: #fff;
 }
+#girls .slide .slide-contents .wrap dl{color: #fff;}
 #girls .slide .slide-contents .wrap dl dt{font-weight: bold;text-overflow: ellipsis;
   overflow: hidden;white-space: nowrap;}
 #girls .slide .slide-contents .wrap dl dd:last-child{padding-top: 20px;}
 #girls .slide button{
+  position: absolute;
+  top: 50%;
   background: none;
   border: none;
   font-size: 35px;
-  position: absolute;
-  top: 50%;
+  color: #fff;
+  cursor: pointer;
   transform: translateY(-50%);
 }
 #girls .slide .prev{left: 0;}
@@ -282,6 +260,8 @@ footer{
   bottom: 20px;
   z-index: 200;
   width: 200px;
+  color: #fff;
+  font-size: 12px;
   text-align: center;
 }
 
