--- a/megabox/css/megabox.css
+++ b/megabox/css/megabox.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1');
 
 /*common*/
 *{margin: 0; padding: 0}
+body{font-family: 'Gothic A1', sans-serif;}
 a{text-decoration: none;}
 li{list-style: none;}
 
@@ -39,7 +40,7 @@ nav ul li a{
   width: 100%;
   height: 40px;
   line-height: 40px;
-  font-size: 20px;
+  font-size: 14px;
   color: #fff;
   padding: 0 10px;
   box-sizing: border-box;
@@ -57,6 +58,7 @@ section{
 }
 section h2{
   color: #fff;
+  font-size: 20px;
   margin-top: 20px;
   padding: 40px 0;
   border-bottom: 2px solid #38424a
