--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -2,7 +2,6 @@
 *{margin: 0; padding: 0;}
 html,body{
   position: relative;
-  /* height: 100%; */
 }
 
 
@@ -90,7 +89,6 @@ html,body{
   box-shadow: 0px 0px 20px 0.5px blue;
   transition: all 2s;
   animation: odd 2s infinite alternate;
-  /* animation: size 3s infinite alternate; */
 }
 .star .parallax-bg.main_parallax_bg a:nth-child(10n){
   width: 5px;height: 5px;
@@ -125,7 +123,6 @@ html,body{
 
 @keyframes even {
   0%,100%{opacity: 1;}
-  /* 10%{opacity: .1;background: blue;} */
   50%{opacity: 0;}
   80%{opacity: .9;box-shadow: 0px 0px 20px 0.5px blue;}
   90%{opacity: 0;box-shadow: 0px 0px 20px 0.5px blue;}
@@ -183,21 +180,14 @@ html,body{
   to{bottom:10px;}
 }
 
-.maintext2{padding-top: 135px;}
+.maintext2{padding-top: 135px;opacity: 0;}
 .maintext2 li{
-  /* display: inline-block; */
-  /* position: absolute; */
   left: 50%;
-  /* top: 50%; */
   text-align: center;
   font-size: 12px;
   color: #fff;
-  /* margin-top: -100px; */
   padding-bottom: 10px;
-  /* animation-duration: 2s; */
-  animation-delay: 1s;
   letter-spacing: 2px;
-  /* font-family: 'Nanum Myeongjo', serif; */
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
@@ -206,7 +196,6 @@ html,body{
 @media (max-width: 767px) {
   /* main */
   .star{height: 795px;}
-  /* .parallax-bg{height: 500px;} */
   .star .parallax-bg.main_parallax_bg{height: 739px;}
   .maintext1{width: 50%;top: 50px;}
   .maintext2{padding-top: 150px;}
