--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -5,6 +5,9 @@ html,body{
 }
 
 
+
+
+
 /* 인트로 ====================================================================*/
 .intro{
   position: relative;
@@ -46,24 +49,28 @@ html,body{
 .intro button:hover::after{
   left: 186%;
   transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    
 }
 
 
-/* star ======================================================================*/
+
+
+
+/* star start ============================================================ */
 
 .star{
   width: 100%;
   height: 662px;
-  background: #efefed;
+    background-image: url(../images/main.jpeg);
 }
-.star .parallax-bg.main_parallax_bg{
+/* 별 효과 start */
+/* .star .parallax-bg.main_parallax_bg{
   position: absolute;
   left:50%;
   top:0;
   width:100%;
   height: 680px;
   margin-top: 0;
-  /* 백그라운드 그라데이션 적용 */
   background: #282537;
   background-image: -webkit-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
   background-image: -moz-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
@@ -112,22 +119,20 @@ html,body{
   filter: blur(0px);
   opacity: 1;
 }
-
-/* 반짝이는 효과주기 */
 @keyframes odd {
   0%,100%{opacity: 0;}
   10%{opacity: .3;background: yellow;}
   50%{opacity: .1;}
   80%{opacity: .5;}
 }
-
 @keyframes even {
   0%,100%{opacity: 1;}
   50%{opacity: 0;}
   80%{opacity: .9;box-shadow: 0px 0px 20px 0.5px blue;}
   90%{opacity: 0;box-shadow: 0px 0px 20px 0.5px blue;}
-}
-/* main star end ============================================================*/
+} */
+/* 별 효과 end */
+/* main end ============================================================*/
 
 
 
@@ -206,3 +211,4 @@ html,body{
     }
 
 }
+
