--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -3,135 +3,164 @@
 /* 헤더 ====================================================================*/
 header{
   position: absolute;
-  background-color: #252334;
-  padding: 10px 0;
-  height: 85px;
+    
   display: none !important;
+    
+  background-color: #252334;
   opacity: 0 !important;
 }
 header.fixed{
   position: fixed;
-  top: 0;
+  top: 0px;
   left: 0;
   right: 0;
-  background-color: rgb(42, 40, 58);
-  z-index: 999999;
-  width: 100%;
-  height: 85px;
-  line-height: 62px;
+
   display: block !important;
+  width: 100%;
+  height: 73px;
+
+  z-index: 999999;
   opacity: 1 !important;
+
+  background-color: #fff;
+  box-shadow: 0 0 5px 0 gray;
 }
 header .container{
   position: relative;
   max-width: 1200px;
-  padding: 0 20px;
   margin: auto;
 }
 
 /* 로고 */
 header .logo a{
   float: left;
-  color: #fff;
+  
+  color: #000;
   font-size: 25px;
-  line-height: 60px;
   text-decoration: none;
+    
   letter-spacing: 0px;
-  margin-top: 6px;
   transition: all 280ms ease-in-out;
- }
-header .logo a:hover{letter-spacing: 2px;}
-header .logo{margin-top: -7px;}
+}
+header .logo a:hover{
+  letter-spacing: 2px;
+}
+header .logo{
+}
 
 
 /* 네비게이션 ================================================================*/
 header .nav{
+  position: absolute;
   right: 0;
   top: 7px;
   overflow: hidden;
-  position: absolute;
+    
+  line-height: 63px;
 }
 header .nav ul li{
   text-align: center;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
 }
 header .nav ul li a{
   display: block;
-  line-height: 50px;
+    
   font-size: 12px;
-  color: #fff;
+  color: #000;
+    
   transition: all 0.5s;
-  letter-spacing: .5px;
 }
-header .nav ul li a:hover{text-decoration: none;}
 header .nav ul li a.active{
-  background: none;
-  color: #fff;
+  color: #000;
+    
   letter-spacing: 3px;
 }
-header .nav ul li a::after,
+
+/* 내비게이션 밑줄 효과 start */
+/* header .nav ul li a::after,
 header .nav ul li a::before{
-  backface-visibility: hidden;
-  border: 1px solid #fff0;
-  bottom: 0px;
   content: " ";
   display: block;
   margin: 0 auto;
-  position: relative;
+    
+  border: none;
   transition: all 280ms ease-in-out;
-  width: 0;
 }
 header .nav ul li a:hover::after,
 header .nav ul li a:hover::before{
   backface-visibility: hidden;
-  border-color: #fff;
+  border: 1px solid #000;
   transition: width 350ms ease-in-out;
   width: 90%;
 }
 header .nav ul li a.active::after,
 header .nav ul li a.active::before{
   backface-visibility: hidden;
-  border-color: #fff;
+  border: 1px solid #000;
   transition: width 350ms ease-in-out;
   width: 90%;
 }
 header .nav ul li a.active:hover::after,
 header .nav ul li a.active:hover::before{
-  border-color: #fff;
-}
-header .nav ul li a:hover{letter-spacing: 3px;}
+  border: 1px solid #000;
+} */
+/* 내비게이션 밑줄 효과 end */
 
-.nav ul li a:hover{
-  color:#fff;
+header .nav ul li a:hover{
+    letter-spacing: 3px;
 }
-.nav button{display: none;}
+.nav ul li a:hover{
+  color:#000;
+}
+.nav button{
+    display: none;
+}
 
 
 /* 컨테이너 ===============================================================*/
-.container{max-width: 1200px;margin: auto;position: relative;
-  margin-bottom: 100px;height: 100%;}
-/* h2 =============*/
+.container{
+  max-width: 1200px;
+  margin: auto;
+  position: relative;
+  margin-bottom: 100px;
+  height: 100%;
+
+  width: 100%;
+  padding: 0 20px;
+}
 #slide > h2, .container > h2{
   font-size: 20px;
   color: #000;
   margin: 50px 0;
   padding-top: 50px;
   letter-spacing: 3px;
+  text-align: center;
 }
-.container{width: 100%;padding: 0 20px;}
-.container > h2 a{position: relative;display: inline-block;flex: 1;
-  /* background: #f3f377; */color: #000;
+.container > p{
+  text-align: center;
+}
+.container > h2 a{
+  position: relative;
+  display: inline-block;flex: 1;
+  color: #000;
   background-image: linear-gradient(to right, #f3f377 0, #f3f377 100%);
-  background-size: 0 100%;background-repeat: no-repeat;
-  background-position: 0 0.1em;transition: background 3s;}
-.container:hover > h2 a{background-size: 100% 100%;background-position: 0 0.1em;
-  color: #000;}
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+  background-position: 0 0.1em;
+  transition: background 3s;
+}
+.container:hover > h2 a{
+  background-size: 100% 100%;
+  background-position: 0 0.1em;
+  color: #000;
+}
 
 
 
 /* 컨텐츠 ====================================================================*/
-section .box{margin-top: 100px;font-size: 3em;text-align: center;}
+section .box{
+  margin-top: 100px;
+}
+
 /* 슬라이드 */
 section .box:nth-child(1){background: #fff; margin-top: 0;}
 /* about */
@@ -272,11 +301,17 @@ section .box:nth-child(6){background: #fff;height: 600px;}
 
 
 /* about =====================================================================*/
-#about .container > p{font-size: 14px;color: #aaa5a5;margin-top: -50px;}
+#about .container > p{
+  font-size: 14px;
+  color: #aaa5a5;
+  margin-top: -50px;
+  text-align: center;
+}
 .about_img img{width: 300px;}
 .about_img{position: relative;height: 100%;}
-.aboutext_wrap{position: absolute !important;
-  right: 0;top: 50%;}
+.aboutext_wrap{
+  /* width: auto; */
+}
 .aboutext_wrap .aboutext{
   display: inline;
   position: relative;
@@ -340,6 +375,124 @@ section .box:nth-child(6){background: #fff;height: 600px;}
   padding-top: 8px;
   opacity: 1;
 }
+
+
+/* 수정한 부분 start ========================================================= */
+/* 11.30 보완 */
+
+/* .head-line{
+  width: 5px;
+  height: 50px;
+  background: white;
+  margin-left: 10px;
+  
+  display: block;    
+  position: fixed;
+  top: 0;
+}
+.txt-top{
+  position: absolute;
+  top: 0;
+  left: 0;
+ 
+  padding: 20px;
+  margin-left: 20px;
+} */
+
+
+
+
+
+/* main =============================== */
+#main{
+  /* height: 840px; */
+  
+  border: 1px solid gray;
+}
+
+/* main-left  */
+.main-left{
+  float: left;
+  width: 50%;
+}
+/* 이미지 백그라운드로 넣은 것 */
+/* .main-left > div{
+  background-image: url(../img/prototype.jpg);
+  background-size: 200%;
+  background-position: 80% 0;
+  background-repeat: no-repeat;
+  
+  height: 773px;
+  margin: 0 100px;
+  overflow: hidden;
+} */
+
+.main-left div.images{
+/*     line-height: 700px; */
+}
+.main-left div.images img{
+/*     vertical-align: middle; */
+  width: 33.3%;
+}
+.main-background{
+  background: rgba(240, 235, 224, 1);
+  width: 100px;
+  height: 950px;
+  
+  position: absolute;
+  top: 0;
+  
+  z-index: -1;
+}
+
+
+
+
+
+/* .main-right-box  */
+
+.main-right{
+  display: table;
+  height: 700px;
+  
+  position: relative;
+}
+.main-right div.main-pre{
+  color: red;
+}
+.main-right div.main-introduce{
+  display: table-cell;
+  vertical-align: middle;
+}
+.main-right div.main-introduce ul li:nth-child(3){
+  padding-top: 20px;
+}
+.main-right .border{
+  border: 1px solid rgb(221, 170, 170);
+  
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 600px;
+  height: 300px;
+  margin-top: 200px;
+  margin-right: 150px;
+}
+
+
+
+
+
+/* footer 
+footer{
+ line-height: 200px;
+}
+.txt-footer{
+  position: absolute;
+  right: 0;
+}
+
+/* 수정한 부분 end ============================================================= */
 
 
 
@@ -477,22 +630,18 @@ section .box:nth-child(6){background: #fff;height: 600px;}
 
 
 /* contact ==================================================================*/
-.contact_info{margin-bottom: 90px;}
-.contact_info p{font-size: 12px;}
-.contact_info p:nth-child(1){letter-spacing: 1px;}
-.contact_info ul{position: absolute;padding-top: 35px;right: 50%;
-  transform: translate(50%,0);}
-.contact_info ul li{float: left;font-size: 14px;}
-.contact_info ul li:nth-child(1){margin-right: 70px;}
-.contact_info ul li i{padding-right: 10px;}
-.contact_form{margin-bottom: 30px;}
-.contact_form a{
+#contact .container{
+  text-align: center;
+}
+#contact .contact_form{
   display: inline-block;
+
   color: #FFFFFF;
   border-radius: 30px;
   width: 330px;
   height: 50px;
   padding: 13px;
+
   font-size: 14px;
   font-weight: 500;
   background-color: #231d63;
@@ -502,13 +651,10 @@ section .box:nth-child(6){background: #fff;height: 600px;}
   transition: all 0.2s cubic-bezier(0.4, 0, 1, 1),
     background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact_form a:hover{
+#contact .contact_form:hover{
   background-image: linear-gradient(to right, rgb(50, 51, 102) , rgb(101, 67, 111));
   color: #fff;
   transform: translate3d(0, -3px, 0);
-  /* box-shadow: 0 14px 26px -12px rgba(28, 68, 125, 0.42),
-  0 4px 23px 0px rgba(0, 0, 0, 0.12),
-  0 8px 10px -5px rgba(98, 95, 99, 0.6); */
   box-shadow: 0 14px 16px -11px rgba(19, 33, 80, 0.42),
   0 12px 14px 2px rgba(0, 0, 0, 0.12),
   0 8px 10px -5px rgba(28, 59, 117, 0.2)
@@ -683,3 +829,7 @@ section .box:nth-child(6){margin-top: -100px;height: 550px;}
   header .nav ul{width: 450px;}
   header .nav ul li{padding:0;}
 }
+
+
+
+
