--- a/portfolio/css/intro.css
+++ b/portfolio/css/intro.css
@@ -1,11 +1,7 @@
 @charset "UTF-8";
-*{margin: 0; padding: 0;}
 html,body{
   position: relative;
 }
-
-
-
 
 
 /* 인트로 ====================================================================*/
@@ -54,96 +50,21 @@ html,body{
 
 
 
-
-
-/* star start ============================================================ */
-
+/* 배경넣은 메인 화면 start ============================================================ */
 .star{
   width: 100%;
   height: 662px;
-    background-image: url(../images/main.jpeg);
+  background-image: url(../images/main.jpeg);
 }
-/* 별 효과 start */
-/* .star .parallax-bg.main_parallax_bg{
-  position: absolute;
-  left:50%;
-  top:0;
-  width:100%;
-  height: 680px;
-  margin-top: 0;
-  background: #282537;
-  background-image: -webkit-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-  background-image: -moz-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-  background-image: -o-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-  background-image: radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
-  overflow: hidden;
-  transform: translate3d(-50%,0,0) !important;
-}
-.star .parallax-bg.main_parallax_bg a{
-  position: absolute;
-  display: inline-block;
-  width: 1px;
-  height: 1px;
-  background: #fff;
-  animation-delay: 2s;
-  filter: blur(1px);
-  transition: all 2s;
-  animation: even 2s infinite alternate;
-}
-.star .parallax-bg.main_parallax_bg a:nth-child(odd){
-  width: 2px;height: 2px;
-  background: #fff;
-  box-shadow: 0px 0px 20px 0.5px blue;
-  transition: all 2s;
-  animation: odd 2s infinite alternate;
-}
-.star .parallax-bg.main_parallax_bg a:nth-child(10n){
-  width: 5px;height: 5px;
-  border-radius: 30px;
-  background: #fff;
-  box-shadow: 0px 0px 30px 1px blue;
-  transition: all 1s;
-  animation: odd 5s infinite alternate;
-}
-.star .parallax-bg.main_parallax_bg a:nth-child(3n+2){
-  width: 1px;
-  height: 1px;
-  background: #fff;
-  filter: blur(0px);
-}
-.star .parallax-bg.main_parallax_bg a:nth-child(50n){
-  width: 5px;height: 5px;
-  border-radius: 50%;
-  background: #fff;
-  box-shadow: 0px 0px 20px 1px white;
-  filter: blur(0px);
-  opacity: 1;
-}
-@keyframes odd {
-  0%,100%{opacity: 0;}
-  10%{opacity: .3;background: yellow;}
-  50%{opacity: .1;}
-  80%{opacity: .5;}
-}
-@keyframes even {
-  0%,100%{opacity: 1;}
-  50%{opacity: 0;}
-  80%{opacity: .9;box-shadow: 0px 0px 20px 0.5px blue;}
-  90%{opacity: 0;box-shadow: 0px 0px 20px 0.5px blue;}
-} */
-/* 별 효과 end */
-/* main end ============================================================*/
-
-
 
 /* miantext */
-
 .maintext1{
   position: relative;
-  top:15%; left:50%; height: 150px;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 50%;
+  height: 150px;
+  transform: translate(-30%, -50%);
   width: 450px;
-  opacity: 0;
 }
 .maintext1 div{
   position: absolute;
@@ -207,8 +128,6 @@ html,body{
 
   /* intro */
     .intro{height: auto;padding-top: 129px}
-    .intro button{
-    }
 
 }
 
