--- a/portfolio/css/loading.css
+++ b/portfolio/css/loading.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* 로딩 */
-.bg{
+/* .bg{
   position: fixed;
   width:100%; height: 100%;
   left:0; right:0; top:0; bottom:0;
@@ -9,7 +9,7 @@
   filter:hue-rotate(0deg);
   animation: hue 10000ms infinite linear;
   z-index: 100000;
-}
+} */
 .loading{
   position: absolute;
   top:50%; left:50%;
